# mollie-rust-api

./: .env.dist  Cargo.toml  README.md
examples/: create_payment.rs
src/: config.rs  errors.rs  lib.rs  main.rs
src/payments/: create.rs  mod.rs
src/tests/: payments.rs
